--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -11,7 +11,7 @@ $font-size: 20px;
   color: $color;
 }
 
-.todosNav__icon {
+.todosNav__link--icon {
   list-style: none;
   color: white;
   font-size: $font-size;
