--- a/src/components/TodosStatistics.scss
+++ b/src/components/TodosStatistics.scss
@@ -4,22 +4,21 @@ $orange_color: #ffc107;
 $red_color: #dc3545;
 $grey_color: #999999;
 
+.todosStatistics__statusCount {
+  cursor: pointer;
+  color: $white_color;
+}
+
 .todosStatistics__statusCount--done {
   background-color: $green_color;
-  color: $white_color;
-  cursor: pointer;
 }
 
 .todosStatistics__statusCount--inprogress {
   background-color: $orange_color;
-  color: $white_color;
-  cursor: pointer;
 }
 
 .todosStatistics__statusCount--todo {
   background-color: $red_color;
-  color: $white_color;
-  cursor: pointer;
 }
 
 .todosStatistics__statusDone {
