Change pagination active done.

--- a/src/components/TodosPagination.scss
+++ b/src/components/TodosPagination.scss
@@ -1,4 +1,9 @@
-.todosPaginationLinkStyle a:hover {
-  background-color: #433567;
-  color: white;
+.page-item.active .page-link {
+  background-color: #433567 !important;
+  border-color: #433567 !important;
+  color: white !important;
+}
+
+.page-link {
+  color: #433567 !important;
 }
